2011-07-19  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Sped up file identification by caching
	read operations.

	* mkvmerge: bug fix: Fixed identifying QuickTime/MP4 files that
	start with a 'skip' atom.

2011-07-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed a crash when reading AVI files with DTS
	audio tracks that do not contain valid headers in the first couple
	of packets. Fix for bug 646.

2011-07-11  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.9.1.

	* mkvmerge: bug fix: Fixed endless loop when reading AVI files on
	Windows if MKVToolNix was compiled with a gcc mingw cross compiler
	v4.4.x. Fix for bug 642.

	* mkvmerge: bug fix: Fixed long file identification time caused by
	DV detection. Fix for bug 641.

2011-07-10  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.9.0.

2011-07-09  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: DV files are recognized as an unsupported
	container type. Fix for bug 630.

	* mkvmerge: bug fix: Fixed handling block groups in Matroska
	files with a duration of 0.

2011-07-08  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: Various compatibility fixes for use with wxWidgets 2.9.x.

2011-06-23  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed building with Sun Studio's C compiler.

2011-06-03  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: ISO 639-2 terminology language codes are
	converted to the corresponding bibliography code upon file
	identification (e.g. 'deu' is converted to 'ger').

2011-06-02  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: bug fix: The timecode scale is retrieved first before
	applying it to the segment duration.

	* all: Added an Italian translation by Roberto Boriotti and
	Matteo Angelino (see AUTHORS).

2011-05-28  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed populating the 'compression' drop down box
	according to what mkvmerge was compiled with.

2011-05-26  Moritz Bunkus  <moritz@bunkus.org>
